# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "normal_estimation_depth",
    srcs = ["normal_estimation_depth.ipynb"],
    data = ["//manipulation/models:models"],
    deps = [
        "//manipulation",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/clutter:test_normal",
        "//manipulation:mustard_depth_camera_example",
    ],
)

rt_ipynb_test(
    name = "analytic_antipodal_grasps",
    srcs = ["analytic_antipodal_grasps.ipynb"],
    deps = [
        "//manipulation",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/clutter:test_analytic_grasp",
    ],
)

#rt_ipynb_test(
#    name = "grasp_candidate",
#    srcs = ["grasp_candidate.ipynb"],
#    data = ["//manipulation/models:models"],    
#    deps = [
#        "//manipulation",
#        "//manipulation/exercises:grader",
#        "//manipulation/exercises/clutter:test_grasp_candidate",
#    ],
#)
