# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2021 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "static_equilibrium",
    srcs = ["static_equilibrium.ipynb"],
    deps = [
        "//manipulation",
        "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "normal_estimation_depth",
    srcs = ["normal_estimation_depth.ipynb"],
    # Open3D 0.10 is not compatible with Python 3.9.
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    deps = [
        "//manipulation",
        "//manipulation:open3d_utils",
        "//manipulation:meshcat_utils",
        "//manipulation:scenarios",
        "//manipulation:mustard_depth_camera_example",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/clutter:test_normal",
    ],
)

rt_ipynb_test(
    name = "analytic_antipodal_grasps",
    srcs = ["analytic_antipodal_grasps.ipynb"],
    deps = [
        "//manipulation",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/clutter:test_analytic_grasp",
    ],
)

rt_ipynb_test(
    name = "grasp_candidate",
    srcs = ["grasp_candidate.ipynb"],
    # Open3D 0.10 is not compatible with Python 3.9.
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    data = [
      "//manipulation/models",
      "//data:mustard_bottle.pcd",
    ],
    deps = [
        "//manipulation",
        "//manipulation:meshcat_utils",
        "//manipulation:open3d_utils",
        "//manipulation:scenarios",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/clutter:test_grasp_candidate",
    ],
)
