# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2021 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "hybrid_force_position",
    srcs = ["hybrid_force_position.ipynb"],
    deps = [
        "//manipulation",
        "//manipulation/exercises:grader",
        "//manipulation/exercises/force:test_hybrid",
    ],
)
